@@ -523,6 +523,16 @@ minlongitude: float, optional
     Limit to events with a longitude larger than the specified minimum.
 maxlongitude: float, optional
     Limit to events with a longitude smaller than the specified maximum.
+latitude: float, optional
+    Specify the latitude to be used for a radius search.
+longitude: float, optional
+    Specify the longitude to the used for a radius search.
+minradius: float, optional
+    Limit to events within the specified minimum number of degrees from 
+    the geographic point defined by the latitude and longitude parameters.
+maxradius: float, optional
+    Limit to events within the specified maximum number of degrees from 
+    the geographic point defined by the latitude and longitude parameters.
 mindepth: float, optional
     Limit to events with depth, in kilometers, larger than the specified
     minimum.
@@ -545,7 +555,12 @@ offset: int, optional
 contributor: str, optional
     Limit to events contributed by a specified contributor.
 updatedafter: obspy.UTCDateTime or valid input to such, optional
-    Limit to events updated after the specified time."""
+    Limit to events updated after the specified time.
+degrees: int, default True
+    If False, the parameters maxradius and minradius are specified in m
+    rather than degrees. Note: this parameter may not be supported by
+    non-obsplus event clients. 
+"""
 
 # the description for the parameter 'bar' in the bank `update_index` methods.
 bar_paramter_description = """
